# UbiGaCha9

./: .gitignore  CMakeLists.txt  UbiGaCha9.sln  Ubigacha.sdf  Ubigacha.sln  Ubigacha.vcxproj  Ubigacha.vcxproj.filters  ]
Debug/: UbiGaCha9.ilk
UbiGaCha9/: Scoring.cpp  Scoring.h  UbiGaCha9.vcxproj  UbiGaCha9.vcxproj.filters  main.cpp
UbiGaCha9/Release/: CL.read.1.tlog  CL.write.1.tlog  UbiGaCha9.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
include/: #Game.hh#  AController.hh  Arrow.hh  Asset.hh  AssetDescriptor.hh  AudioManager.hh  Audios.hh  Box.hh  Controller.hh  Credits.hh  EventPlayer.hh  Exit.hh  FoxSpirit.hh  Game.hh  GameObject.hh  Hero.hh  ILayer.hh  Inventory.hh  ItemObject.hh  Kamea.hh  Light.hh  MainMenuLayer.hh  Mob.hh  Mob0.hh  Mob1.hh  Mob2.hh  Mob3.hh  PlayerInventory.hh  QuadTree.hh  Scoring.h  Scoring.hh  SoundManager.hh  UbiException.hh  Utils.hh  Wall.hh  World.hh  sf_tile_engine.h
include/SfTileEngine/: sf_camera.h  sf_dll_macro.h  sf_entity.h  sf_object.h  sf_object_layer.h  sf_tile.h  sf_tilemap.h  (+4 more)
server/: serv.py
src/: AController.cpp  Arrow.cpp  Asset.cpp  AssetDescriptor.cpp  AudioManager.cpp  Audios.cpp  Box.cpp  Controller.cpp  Credits.cpp  EventPlayer.cpp  FoxSpirit.cpp  Game.cpp  GameObject.cpp  Hero.cpp  Inventory.cpp  ItemObject.cpp  Kamea.cpp  MainMenuLayer.cpp  Mob.cpp  Mob.hh  Mob0.cpp  Mob1.cpp  Mob2.cpp  Mob3.cpp  PlayerInventory.cpp  QuadTree.cpp  Scoring.cpp  SoundManager.cpp  UbiException.cpp  Utils.cpp  World.cpp  main.cpp
(+41 files in other folders)
